force-app/main/default/objects/Order/fields/Analise_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Analise_de_Credito__c</fullName>
    <label>Análise de Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE LIVRE</fullName>
            </value>
            <value>
                <fullName>CLIENTE OK</fullName>
            </value>
            <value>
                <fullName>CLIENTE EM OBSERVAÇÃO</fullName>
            </value>
            <value>
                <fullName>ALERTA RISCO DE CRÉDITO</fullName>
            </value>
            <value>
                <fullName>CLIENTE BLOQUEADO POR ATRASOS</fullName>
            </value>
            <value>
                <fullName>CLIENTE ATRASO SUPERIOR 20 DIAS</fullName>
            </value>
            <value>
                <fullName>COLIGADA/INTERLIGADA C/TT VENCIDO/APONTAMENTO</fullName>
            </value>
            <value>
                <fullName>CLIENTE COBRANÇA PROTESTO/JURÍDICO</fullName>
            </value>
            <value>
                <fullName>CLIENTE COM BAIXA EM PERDA</fullName>
            </value>
            <value>
                <fullName>CLIENTE BLOQUEADO - OUTROS MOTIVOS</fullName>
            </value>
            <value>
                <fullName>EMPRESA NOVA DE FUNDAÇÃO &lt;12 S/USO ALÇADA</fullName>
            </value>
            <value>
                <fullName>FALENCIA/ RECUPERAÇÃO JUDICIAL/ CONCORDATA</fullName>
            </value>
            <value>
                <fullName>CLIENTE INATIVO A MAIS DE 06 MESES</fullName>
            </value>
            <value>
                <fullName>CLIENTE INATIVO A MAIS DE 12 MESES</fullName>
            </value>
            <value>
                <fullName>SOMENTE PAGAMENTO ANTECIPADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>