force-app/main/default/objects/Order/fields/DWMotivoRecusa__c.field-meta.xml
<CustomField>
    <fullName>DWMotivoRecusa__c</fullName>
    <label>Motivo recusa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z7</fullName>
                <label>Quantidade errada</label>
            </value>
            <value>
                <fullName>Z8</fullName>
                <label>Cliente cancelou pedido</label>
            </value>
            <value>
                <fullName>Z9</fullName>
                <label>Emitido para o CNPJ errado</label>
            </value>
            <value>
                <fullName>ZA</fullName>
                <label>Preço errado</label>
            </value>
            <value>
                <fullName>ZB</fullName>
                <label>Produto errado</label>
            </value>
            <value>
                <fullName>ZC</fullName>
                <label>Endereço de entrega errado</label>
            </value>
            <value>
                <fullName>ZD</fullName>
                <label>Outros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>