force-app/main/default/objects/Order/fields/Status_Bloqueio__c.field-meta.xml
<CustomField>
    <fullName>Status_Bloqueio__c</fullName>
    <label>Status/Bloqueio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRÉDITO APROVAÇÃO DIRETA</fullName>
            </value>
            <value>
                <fullName>ALÇADA COMERCIAL</fullName>
            </value>
            <value>
                <fullName>CLIENTE DEVE ENCARGOS FINANCEIROS</fullName>
            </value>
            <value>
                <fullName>PEDIDO EXCEDEU O LIMITE DE CRÉDITO</fullName>
            </value>
            <value>
                <fullName>CLIENTE COM DUPLICATA VENCIDA</fullName>
            </value>
            <value>
                <fullName>CLIENTE COM RESTRIÇÕES EXTERNAS</fullName>
            </value>
            <value>
                <fullName>LIMITE DE CRÉDITO NÃO APROVADO</fullName>
            </value>
            <value>
                <fullName>COLIGADA COM DUPLICATA VENCIDA</fullName>
            </value>
            <value>
                <fullName>PENDENCIA COMERCIAL</fullName>
            </value>
            <value>
                <fullName>ERRO PRAZO DE PAGAMENTO (DIVERGENTE DO AUTORIZADO)</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO DOCUMENTOS PARA AUMENTO DE LIMITE</fullName>
            </value>
            <value>
                <fullName>VENDA SOMENTE COM PAGAMENTO ANTECIPADO</fullName>
            </value>
            <value>
                <fullName>EMPRESA NOVA DE FUNDAÇÃO</fullName>
            </value>
            <value>
                <fullName>PEDIDO NÃO SERÁ LIBERADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>