force-app/main/default/objects/Order/recordTypes/DWAmostra.recordType-meta.xml
<RecordType>
    <fullName>DWAmostra</fullName>
    <active>true</active>
    <label>Amostra</label>
</RecordType>