force-app/main/default/objects/Order/recordTypes/DWBonificacao.recordType-meta.xml
<RecordType>
    <fullName>DWBonificacao</fullName>
    <active>true</active>
    <label>Bonificação</label>
</RecordType>