force-app/main/default/objects/Order/recordTypes/DWDoacao.recordType-meta.xml
<RecordType>
    <fullName>DWDoacao</fullName>
    <active>true</active>
    <label>Doação</label>
</RecordType>