force-app/main/default/objects/Order/recordTypes/DWJumboRoll.recordType-meta.xml
<RecordType>
    <fullName>DWJumboRoll</fullName>
    <active>true</active>
    <label>Jumbo Roll</label>
</RecordType>