force-app/main/default/objects/Order/recordTypes/DWVenda.recordType-meta.xml
<RecordType>
    <fullName>DWVenda</fullName>
    <active>true</active>
    <label>Venda</label>
</RecordType>